Better formatting for readability.

--- a/src/NewRelic.Microsoft.SqlServer.Plugin/app.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/app.config
@@ -4,6 +4,7 @@
 	<configSections>
 		<section name="newRelic" type="NewRelic.Microsoft.SqlServer.Plugin.Configuration.NewRelicConfigurationSection, NewRelic.Microsoft.SqlServer.Plugin" />
 	</configSections>
+
 	<appSettings>
 		<!--
 			Proxy Settings [Optional] - See Network Settings below for further explaination
@@ -17,44 +18,62 @@
 		
 				proxyPassword [Required when using proxy with default credentials off]
 					Defines the password for the above account, used when initiating a request through the proxy
-			
+		-->
+		<!--
 				<add key="proxyAddress" value="http://www.proxyaddress:5503"/>
 				<add key="proxyUsername" value="OFFICE\jdoe"/>
 				<add key="proxyPassword" value="p@ssw0rd"/>
-		-->
+		-->		
 	</appSettings>
 	<newRelic>
 		<!-- 
-    licenseKey [Required]
-    ==========
-    Specify your New Relic license key.
-    ######
+			licenseKey [Required]
+			==========
+			Specify your New Relic license key.
+			######
 
-    pollIntervalSeconds [Default: 60]
-    ======
-    Specify the frequency of the polling in seconds.
-    ######
-    -->
+			pollIntervalSeconds [Default: 60]
+			======
+			Specify the frequency of the polling in seconds.
+			######
+		-->
 		<service licenseKey="YOUR_KEY_HERE" pollIntervalSeconds="60" />
 		<!-- List of SQL Server instances. Server 2008, 2008 R2, and 2012 supported. -->
 		<sqlServers>
 			<!-- 
-      name [Required]
-      ==========
-      Unique (within this set) name of the SQL Server to be monitored. This name appears on the New Relic dashboard.
-      ##########
+				name [Required]
+				==========
+				Unique (within this set) name of the SQL Server to be monitored. This name appears on the New Relic dashboard.
+				##########
     
-      connectionString [Required]
-      ======
-      Connection string to the SQL Server.
-      ######
+				connectionString [Required]
+				======
+				Connection string to the SQL Server.
+				######
       
-      includeSystemDatabases [Optional]
-      ======
-      Indicates if the system databases (tempdb, master, model, msdb) should be included in metric gathering.
-      Defaults to false
-      ######
-      -->
+				includeSystemDatabases [Optional]
+				======
+				Indicates if the system databases (tempdb, master, model, msdb) should be included in metric gathering.
+				Defaults to false
+				######
+								
+				sqlServer can contain the following elements:
+				
+					Include OR Exclude database from metric gathering reporting
+
+					includes [Optional]
+					==========
+					Contains a set of database elements that define explicitly which databases will be included in metric gathering. 
+					
+					excludes [Optional]
+					==========
+					Contains a set of database elements that define explicitly which databases will be excluded from metric gathering. 
+					########
+						
+					includes or excludes should contain a collection of database elements in the following format
+					
+					<database name="fooDB"/>
+			-->
 			<sqlServer name="Production Database" connectionString="Server=.\SQLExpress;Database=master;Trusted_Connection=True;" includeSystemDatabases="false">
 				<!-- Include OR exclude database from metric gathering reporting.-->
 				<!-- includes [Optional]: Contains a set of database elements that define explicitly which databases will be included in metric gathering. -->
@@ -72,22 +91,21 @@
 		<!-- List of Azure SQL databases. One per Azure SQL Database, not per Azure SQL Server. -->
 		<azure>
 			<!--
-      name [Required]
-      ==========
-      Unique (within this set) name of the Azure SQL Databases to be monitored. This name appears on the New Relic dashboard.
-      ##########
+				name [Required]
+				==========
+				Unique (within this set) name of the Azure SQL Databases to be monitored. This name appears on the New Relic dashboard.
+				##########
     
-      connectionString [Required]
-      ======
-      Connection string to the Azure SQL Database.
-      ######
-      -->
+				connectionString [Required]
+				======
+				Connection string to the Azure SQL Database.
+				######
+			  -->
 			<database name="Azure Cloud Database"
 					  connectionString="Server=tcp:{Azure SQL Server Name}.database.windows.net,1433;Database={Azure SQL Database Name};User ID={Azure SQL User Name}@{Azure SQL Server Name};Password={Password for User Name};Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" />
 		</azure>
 	</newRelic>
-
-
+	
 	<!--
 	Network Settings
 	================
@@ -98,26 +116,30 @@
 
 		If the host machine is already configured to use the proxy and the credentials under which the plugin Windows Service is running can access the proxy,
 		Then all you have to do is tell the app to use the default proxy settings like so:
-
+        -->
+	<!--
 		<system.net>
 			<defaultProxy enabled="true" useDefaultCredentials="true">
 				<proxy usesystemdefault="True" bypassonlocal="True" />
 			</defaultProxy>
 		</system.net>
-	
+	-->
+	<!--
 	
 	Example 2 - alternate credentials
 		
 		If the proxy requires login credentials different from those under which the plugin Windows Service is running, you will need to the following configuration.
 		The configuration below, tells the app to use our custom Proxy provider that will get its credential information from the "proxyUsername" and "proxyPassword" appSettings
-
+	-->
+	<!--
 		<system.net>
 			<defaultProxy enabled="true" useDefaultCredentials="false">
 				<module type="NewRelic.Platform.Binding.DotNET.Proxy, NewRelic.Platform.Binding.DotNET"/>
 			</defaultProxy>
 		</system.net>
-	
-		Which will also require that you add proxyUsername and proxyPassword to appSettings above. 
+	-->
+	<!--
+		Which will also require that you add proxyUsername and proxyPassword to <appSettings> at the top of the file. 
 		In addition you can optionally specify to use any proxy address by setting proxyAddress (leaving this off, the plugin will use the proxy address used configured in Windows internet options)
 
 		For example these values could be:
