--- a/src/NewRelic.Microsoft.SqlServer.Plugin/app.deploy.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/app.deploy.config
@@ -2,8 +2,7 @@
 
 <configuration>
 	<configSections>
-		<section name="newRelic"
-		         type="NewRelic.Microsoft.SqlServer.Plugin.Configuration.NewRelicConfigurationSection, NewRelic.Microsoft.SqlServer.Plugin" />
+		<section name="newRelic" type="NewRelic.Microsoft.SqlServer.Plugin.Configuration.NewRelicConfigurationSection, NewRelic.Microsoft.SqlServer.Plugin" />
 	</configSections>
 
 	<appSettings>
@@ -19,7 +18,8 @@
 		
 				proxyPassword [Required when using proxy with default credentials off]
 					Defines the password for the above account, used when initiating a request through the proxy
-			
+		-->
+		<!--
 				<add key="proxyAddress" value="http://www.proxyaddress:5503"/>
 				<add key="proxyUsername" value="OFFICE\jdoe"/>
 				<add key="proxyPassword" value="p@ssw0rd"/>
@@ -124,26 +124,30 @@
 
 		If the host machine is already configured to use the proxy and the credentials under which the plugin Windows Service is running can access the proxy,
 		Then all you have to do is tell the app to use the default proxy settings like so:
-
+        -->
+	<!--
 		<system.net>
 			<defaultProxy enabled="true" useDefaultCredentials="true">
 				<proxy usesystemdefault="True" bypassonlocal="True" />
 			</defaultProxy>
 		</system.net>
-	
+	-->
+	<!--
 	
 	Example 2 - alternate credentials
 		
 		If the proxy requires login credentials different from those under which the plugin Windows Service is running, you will need to the following configuration.
 		The configuration below, tells the app to use our custom Proxy provider that will get its credential information from the "proxyUsername" and "proxyPassword" appSettings
-
+	-->
+	<!--
 		<system.net>
 			<defaultProxy enabled="true" useDefaultCredentials="false">
 				<module type="NewRelic.Platform.Binding.DotNET.Proxy, NewRelic.Platform.Binding.DotNET"/>
 			</defaultProxy>
 		</system.net>
-	
-		Which will also require that you add proxyUsername and proxyPassword to appSettings above. 
+	-->
+	<!--
+		Which will also require that you add proxyUsername and proxyPassword to <appSettings> at the top of the file. 
 		In addition you can optionally specify to use any proxy address by setting proxyAddress (leaving this off, the plugin will use the proxy address used configured in Windows internet options)
 
 		For example these values could be:
