Trying a different approach for proxy support using WebProxy.DefaultProxy. Pulled proxy handling in New Relic SDK. Added proxy config section similar to the .NET Agent.

--- a/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Configuration\Database.cs" />
     <Compile Include="Configuration\DatabaseCollection.cs" />
     <Compile Include="Configuration\DatabaseElement.cs" />
+    <Compile Include="Configuration\ProxyElement.cs" />
     <Compile Include="IMetricQuery.cs" />
     <Compile Include="IQueryContext.cs" />
     <Compile Include="ISqlEndpoint.cs" />
