--- a/src/NewRelic.Microsoft.SqlServer.Plugin/app.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/app.config
@@ -5,26 +5,6 @@
 		<section name="newRelic" type="NewRelic.Microsoft.SqlServer.Plugin.Configuration.NewRelicConfigurationSection, NewRelic.Microsoft.SqlServer.Plugin" />
 	</configSections>
 
-	<appSettings>
-		<!--
-			Proxy Settings [Optional] - See Network Settings below for further explaination
-		
-				proxyAddress [Optional when using proxy with default credentials off]
-					Defines the address of the target proxy
-		
-				proxyUsername [Required when using proxy with default credentials off]
-					Defines the username to log onto the proxy. This name can be prefixed with the
-					appropriate domain for example "OFFICE\jsmith"
-		
-				proxyPassword [Required when using proxy with default credentials off]
-					Defines the password for the above account, used when initiating a request through the proxy
-		-->
-		<!--
-				<add key="proxyAddress" value="http://www.proxyaddress:5503"/>
-				<add key="proxyUsername" value="OFFICE\jdoe"/>
-				<add key="proxyPassword" value="p@ssw0rd"/>
-		-->		
-	</appSettings>
 	<newRelic>
 		<!-- 
 			licenseKey [Required]
@@ -38,6 +18,24 @@
 			######
 		-->
 		<service licenseKey="YOUR_KEY_HERE" pollIntervalSeconds="60" />
+
+		<!-- Proxy settings for connecting to the New Relic service. -->
+		<!-- If a proxy is used, the host attribute is required.
+
+		Attributes:
+		host - The proxy server host name.
+		port - The proxy server port (optional - defaults to 8080).
+		user - The username used to authenticate with the proxy server (optional).
+		password - The password used to authenticate with the proxy server (optional).
+		domain - The domain used to authenticate with the proxy server (optional).
+		useDefaultCredentials - 'true' or 'false. Uses the credentials of the account running the plugin (optional - defaults to false).
+		                        If specified, 'user' and 'password' are ignored.
+		-->
+
+		<!--
+		<proxy host="hostname" />
+		-->
+
 		<!-- List of SQL Server instances. Server 2008, 2008 R2, and 2012 supported. -->
 		<sqlServers>
 			<!-- 
@@ -105,51 +103,4 @@
 					  connectionString="Server=tcp:{Azure SQL Server Name}.database.windows.net,1433;Database={Azure SQL Database Name};User ID={Azure SQL User Name}@{Azure SQL Server Name};Password={Password for User Name};Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" />
 		</azure>
 	</newRelic>
-	
-	<!--
-	Network Settings
-	================
-	
-	These settings are optional, but necessary to make the plugin work in environments that use a proxy server to communicate with the outside world.
-	
-	Example 1 - default credentials
-
-		If the host machine is already configured to use the proxy and the credentials under which the plugin Windows Service is running can access the proxy,
-		Then all you have to do is tell the app to use the default proxy settings like so:
-        -->
-	<!--
-		<system.net>
-			<defaultProxy enabled="true" useDefaultCredentials="true">
-				<proxy usesystemdefault="True" bypassonlocal="True" />
-			</defaultProxy>
-		</system.net>
-	-->
-	<!--
-	
-	Example 2 - alternate credentials
-		
-		If the proxy requires login credentials different from those under which the plugin Windows Service is running, you will need to the following configuration.
-		The configuration below, tells the app to use our custom Proxy provider that will get its credential information from the "proxyUsername" and "proxyPassword" appSettings
-	-->
-	<!--
-		<system.net>
-			<defaultProxy enabled="true" useDefaultCredentials="false">
-				<module type="NewRelic.Platform.Binding.DotNET.Proxy, NewRelic.Platform.Binding.DotNET"/>
-			</defaultProxy>
-		</system.net>
-	-->
-	<!--
-		Which will also require that you add proxyUsername and proxyPassword to <appSettings> at the top of the file. 
-		In addition you can optionally specify to use any proxy address by setting proxyAddress (leaving this off, the plugin will use the proxy address used configured in Windows internet options)
-
-		For example these values could be:
-		
-		<add key="proxyUsername" value="OFFICE\jdoe"/>
-		<add key="proxyPassword" value="p@ssw0rd"/>
-
-		And if you so desire:
-		
-		<add key="proxyAddress" value="http://www.proxyaddress:5503"/>
-	-->
-
 </configuration>
