Fixing bug identified in Ticket #60055 where metrics related to FileIO were no longer being sent as Deltas. It looks like this was mistakenly broken while trying to fix the RecompileSummary (https://github.com/newrelic-platform/newrelic_microsoft_sqlserver_plugin/commit/dd0a651ed6050cc5f27780adbfab0f1820b27b49).
Added a test to make sure we don't face this regression issue again.

--- a/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/NewRelic.Microsoft.SqlServer.Plugin.Tests.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/NewRelic.Microsoft.SqlServer.Plugin.Tests.csproj
@@ -70,7 +70,7 @@
     <Compile Include="QueryTypes\MemoryViewTests.cs" />
     <Compile Include="QueryTypes\RecompileSummaryTests.cs" />
     <Compile Include="SqlEndpointTests.cs" />
-    <Compile Include="SqlMonitoryQueryTests.cs" />
+    <Compile Include="SqlMonitorQueryTests.cs" />
     <Compile Include="TestHelper.cs" />
   </ItemGroup>
   <ItemGroup>
