--- a/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
@@ -83,6 +83,7 @@
     <Compile Include="ISqlQuery.cs" />
     <Compile Include="MetricQuery.cs" />
     <Compile Include="QueryTypes\AzureServiceInterruptionEvents.cs" />
+    <Compile Include="QueryTypes\AzureSqlResourceStats.cs" />
     <Compile Include="QueryTypes\AzureSqlDatabaseSummary.cs" />
     <Compile Include="QueryTypes\SqlServerDetails.cs" />
     <Compile Include="QueryTypes\DatabaseDetails.cs" />
@@ -189,6 +190,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Queries\DatabaseDetails.SqlServer.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Queries\ResourceStats.AzureSQL.sql" />
   </ItemGroup>
   <Import Project="..\Common\NewRelic.Microsoft.SqlServer.Plugin.targets" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
